--- a/html-and-css-prototype/index.html
+++ b/html-and-css-prototype/index.html
@@ -6,12 +6,60 @@
     <link rel="stylesheet" href="CSS/stylesheet.css">
   </head>
   <body>
-    <div class="container">
+    <!-- <div class="container">
       <h1>Recreate this using HTML &amp; CSS</h1>
       <img src="https://s3.amazonaws.com/f.cl.ly/items/2z3C3Z0L2Q0R282p1V0z/Image%202014-12-19%20at%2010.07.09%20AM.png" width="303" />
-    </div>
+    </div> -->
 
-    <!-- Your code goes here -->
+    <!--Sectioning them with rows-->
+
+
+    <div class="container">
+      <h1>Donations</h1>
+
+      <div class="row-1">
+          <h3 id="thisAmount"><strong>$167</strong> still needed for this project</h3>
+      </div>
+          <div id="littleTriangle"></div>
+
+      <div class="imABox">
+        <div id="withinAnotherBox">
+        </div>
+      </div>
+
+      <div class="row-2">
+          <p><strong id="onlyDays">Only 3 days left</strong> to fund this project.</p>
+          <br>
+          <p id="numDonors">Join the <strong>42</strong> other donors who have already supported this project. Every dollar helps.</p>
+          <br>
+
+          <!--the box section-->
+          <table class="numContainer">
+            <tr>
+              <td class="howMuch"><input class="input-field" type='number' placeholder="$" name="dollars" min="0" value="" /></td>
+
+              <!--this is where the button goes-->
+              <td class="topButton">
+                  <button type="button" class="btnGiveNow">Give Now</button>
+              </td>
+            </tr>
+          </table>
+
+          <br>
+          <!--this is a link-->
+          <p class="why50"><a class="link-btn-primary" href="#" role="button"><i>"Why give $50?"</i></a></p>
+      </div>
+
+      <br>
+
+      <div class="row-3">
+        <div class="bottomButton">
+          <button type="button" class="saveForLater"><strong>Save for later</strong></button>
+          <button type="button" class="tellYourFriends"><strong>Tell your friends</strong></button>
+        </div>
+      </div>
+
+    </div>
 
 
 
